--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
 }
 .inputfield-div-header {
   text-align: center;
-  border-bottom: 1px solid #000;
+  border-bottom: 1px solid #ffffff;
   padding-bottom: 1rem;
 }
 .wakeup-time {
