--- a/style.css
+++ b/style.css
@@ -41,14 +41,16 @@ body {
 .wakeup-time {
   margin-top: 3rem;
 }
-.questions {
+.question {
+  font-weight: bold;
 }
 .question-inputfield {
   margin-top: 0.5rem;
   background: none;
   color: rgb(255, 255, 255);
   width: 100%;
-  height: 30px;
+  height: 50px;
+  border-radius: 4px;
   border: 1px solid #999999;
   padding-left: 1rem;
 }
